overlapping options fixed

--- a/stylus/elements/autocomplete.styl
+++ b/stylus/elements/autocomplete.styl
@@ -18,7 +18,7 @@
 		position: relative
 		overflow: auto
 		overflow-x: hidden
-		max-height: 422px
+		max-height: 392px
 	.Textcomplete-inner
 		position: absolute
 		bottom: 0px
@@ -28,7 +28,6 @@
 		border: 1px solid gainsboro-light
 		border-radius: 0
 		box-shadow: 0px 3px 4px 0 rgba(grape-typo, .5)
-		max-height: 422px
 		z-index: 200
 		transition: opacity .1s ease-out, bottom .1s ease-out, height .1s ease-out
 		.entry-type-description
